# arhiva-educationala

./: .clang-format  .envrc  .gitattributes  .gitignore  .markdownlint.json  .mise.toml  .remarkrc.mjs  404.html  CNAME  CODE_OF_CONDUCT.mdx  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  LICENSE-EUPL.ro  Makefile  PROJECT_TEST_COMPLETION_REPORT.md  README.md  README.mdx  TESTING_QUICK_START.md  TEST_COVERAGE.md  TEST_README.md  TEST_SUMMARY.md  authors.py  authors.yml  bun.nix  devenv.nix  draft.py  eslint.config.ts  flake.nix  index.html  mkdocs.yml  next.config.ts  package.json  prerequisites.py  pyproject.toml  requirements.txt  result  sitemap.xml  source.config.ts  tsconfig.json  (+3 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: informatile-sunt-gresite.md  informatile-sunt-gresite.mdx
.github/workflows/: build.yml  lint.yml
avansat/2-sat/: index.html
avansat/advanced-math/: index.html
avansat/aho-corasick/: index.html
avansat/aliens-dp/: index.html
avansat/centroid-decomposition/: index.html
avansat/component-dp/: index.html
avansat/convex-hull-trick/: index.html
avansat/crt/: index.html
avansat/dc-dp/: index.html
avansat/fft/: index.html
cppintro/: index.html
data/: authors.mpk  hashes.json  nav.json  nav.mpk  pre.mpk  prerequisites.json
docs/: .authors.yml  .pages  index.md  licenta.md  robots.txt
licenta/: index.html
mediu/: index.html
overrides/: main.html
public/: _headers
search/: search_index.json
src/: mdx-components.tsx  remark-cpp-clang-format.mjs  remark-lint-cpp-clang-format.mjs
(+4196 files in other folders)
